# MiniRHex

./: Assembly_Instructions.pages  MiniRHex.ino  MiniRhexHardware.xlsx  Overview.md  README.md  _config.yml  base.SLDPRT  bluetooth_commands.txt  citation.txt  conversions.cpp  desired_values.cpp  fullMiniRhex.SLDASM  gait_parameters.cpp  leg_info.cpp  leg_info.h  license.txt  servo sleeve.SLDPRT  shaft-edge.SLDPRT  shaft-mid.SLDPRT
Assembly/: assembly_instructions  assembly_instructions.md  readme.md  readme.txt
Bluetooth/: README.md
CAD/: Battery and case.SLDASM  Battery case.SLDPRT  Battery.SLDPRT  Dynamixel XL-320.SLDPRT  Foundation.SLDPRT  Leg.SLDPRT  Mainboard.SLDPRT  Rhex Mini.SLDASM  Servo and sleeve.SLDASM  base.SLDPRT  cmu-wordmark-horizontal-k.dxf  cover.SLDPRT  dxl_XL-330.SLDPRT  fullMiniRhex.SLDASM  hard cover.SLDPRT  hub_one_screw.SLDPRT  leg.SLDPRT  leg_full.SLDPRT  leg_one_screw.SLDPRT  long_hub.SLDPRT  minirhex_assembly.SLDASM  quick_connect_leg.SLDPRT  quick_connect_leg_double.SLDPRT  quick_connect_leg_double.STL  rml-logo-robots-black.dxf  robot_body.SLDPRT  servo sleeve.SLDPRT  shaft-edge.SLDPRT  shaft-mid.SLDPRT  short_hub.SLDPRT  standard_leg.SLDPRT
Hardware List/: readme.md
HardwareList/: MiniRhexHardware.xlsx  readme.md
Images/: README.md
MiniRHex/: MINIRHEX_ARDUINO.ino  MiniRHex.ino  control_parameters.cpp  conversions.h  desired_values.h  gait_parameters.cpp  gait_parameters.h  (+4 more)
testing/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  conversions_test.cpp  desired_values_test.cpp  plot.py  test_conversions  test_desired
(+58 files in other folders)
